Added files via upload

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-	<title>Mama&rsquo;s Recipe: The Best Chocolate Chip Cookies</title>
+	<title>The Best Chocolate Chip Cookies</title>
 </head>
 <body>
 <center><h1>The Best Chocolate Chip Cookies</h1></center>
