Added files via upload

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <ul>
 	<li>Amazing Chocolate Chip Cookies!</li>
 	<li>Beer and Pretzel Chocolate Chip Cookies</li>
- 	<li>Bisquick® Chocolate Chip Cookies</li>
+ 	<li>Bisquick&reg; Chocolate Chip Cookies</li>
   	<li>Browned Butter and Coconut Chocolate Chip Cookies</li>
  	<li>Buttery Chocolate Chip Cookies</li>
   	<li>Cherry Chocolate Chip Cookies</li>
@@ -43,7 +43,7 @@
 </ul>
 
 
-<p>How to make Mama&rsquo;s Recipe: <em>The Best Chocolate Chip Cookies</em></p>
+<p>How to make <em>Mama&rsquo;s Recipe: The Best Chocolate Chip Cookies</em>:</p>
 	
 	<ol>
 		<li>Preheat oven to 350 degrees</li>
